# tos-spec

./: .gitignore  AVATAR_TEST_PROGRESS.md  BACKLOG.md  CLAUDE.md  MATRIX.md  Makefile  Policy.md  README.md  SCENARIO.md  VISION.md  pyproject.toml
conformance/: README.md  docker-compose.yml
conformance/api/: openapi.yaml
conformance/harness/: Dockerfile  __init__.py  comparator.py  config.py  reporter.py  requirements.txt  runner.py
fixtures/: tx_core.json  wire_format.json
fixtures/api/: rpc.json  rpc_methods.json  rpc_methods.yaml  websocket.json  websocket.yaml
fixtures/consensus/: block_validation.json  block_validation.yaml  blockdag_ordering.json  finality.json  fork_choice.json  fork_choice.yaml  mining_pow.json  transaction_ordering.json  transaction_ordering.yaml
fixtures/crypto/: aes_gcm.json  arbitration.json  base58.json  base58.yaml  bech32.json  bech32.yaml  bigint.json  blake3.json  blake3.yaml  bls12_381.json  bn254.json  bn254.yaml  chacha20.json  chacha20.yaml  chacha20_poly1305.json  chacha20_poly1305.yaml  contract.json  contract.yaml  curve25519.json  discv6.json  ed25519.json  ed25519.yaml  escrow.json  escrow.yaml  hmac_sha256.yaml  hmac_sha512.json  hmac_sha512.yaml  keccak256.json  keccak256.yaml  kyc.yaml  multisig.json  poseidon.json  rangeproofs.json  ristretto255.json  schnorr.json  secp256k1.json  secp256k1.yaml  secp256r1.yaml  sha256.json  sha256.yaml  (+11 more)
fixtures/models/: account_model.json  block_limits.json  block_limits.yaml  energy_system.json  energy_system.yaml  fee_model.json  fee_model.yaml
fixtures/p2p/: faults.json  faults.yaml  handshake.yaml  relay.yaml  sync.yaml
fixtures/security/: access_control.json  access_control.yaml  dos_protection.json  dos_protection.yaml  overflow.json  reentrancy.json  reentrancy.yaml
fixtures/syscalls/: balance_get.json  balance_get.yaml  balance_transfer.json  call.json  code.json  code.yaml  crypto.json  crypto.yaml  environment.json  environment.yaml  events.json  events.yaml  memory.json  memory.yaml  nft.json  storage.json
fixtures/transactions/: fee_variants.json  wire_format_negative.json
fixtures/transactions/account/: agent_account.json  agent_account.yaml  multisig.json  multisig.yaml
fixtures/transactions/arbitration/: cancel_arbiter_exit.json  commit_arbitration_open.json  commit_juror_vote.json  commit_selection_commitment.json  commit_vote_request.json  commit_vote_request.yaml  register_arbiter.json  request_arbiter_exit.json  slash_arbiter.json  slash_arbiter.yaml  submit_verdict_by_juror.json  update_arbiter.json  update_arbiter.yaml  withdraw_arbiter_stake.json  withdraw_arbiter_stake.yaml
fixtures/transactions/block/: multi_tx.json
fixtures/transactions/blockchain/: chain_import.json
fixtures/transactions/contracts/: deploy_contract.json  deploy_contract.yaml  invoke_contract.json  invoke_contract.yaml
fixtures/transactions/core/: burn.json  burn.yaml  transfers.json
fixtures/transactions/energy/: freeze_delegate.json  freeze_delegate.yaml  freeze_tos.json  unfreeze_tos.json  withdraw_unfrozen.json  withdraw_unfrozen.yaml
fixtures/transactions/escrow/: appeal_escrow.json  appeal_escrow.yaml  challenge_escrow.json  challenge_escrow.yaml  create_escrow.json  create_escrow.yaml  deposit_escrow.json  deposit_escrow.yaml  dispute_escrow.json  dispute_escrow.yaml  refund_escrow.json  refund_escrow.yaml  release_escrow.json  submit_verdict.json  submit_verdict.yaml
fixtures/transactions/kyc/: appeal_kyc.json  bootstrap_committee.json  bootstrap_committee.yaml  renew_kyc.json  (+11 more)
rust_generators/crypto/: Cargo.toml  aes_gcm.json  arbitration.yaml  bls12_381.yaml  check_gens.rs  curve25519.json  discv6.json  discv6.yaml  dump_proof.rs  ed25519.json  gen_aes_gcm_vectors.rs  gen_arbitration_vectors.rs  gen_base58_vectors.rs  gen_basic_vectors.rs  gen_bech32_vectors.rs  gen_bigint_vectors.rs  gen_blake3_vectors.rs  gen_block_hash_vectors.rs  gen_bls12_381_vectors.rs  gen_bn254_vectors.rs  gen_chacha20_poly1305_vectors.rs  gen_chacha20_vectors.rs  gen_contract_vectors.rs  gen_curve25519_vectors.rs  gen_discv6_vectors.rs  gen_ed25519_point_vectors.rs  gen_ed25519_vectors.rs  gen_escrow_vectors.rs  gen_hmac_vectors.rs  gen_keccak256_vectors.rs  gen_kyc_vectors.rs  gen_multisig_vectors.rs  gen_poseidon_vectors.rs  gen_rangeproofs_table.rs  gen_rangeproofs_vectors.rs  gen_referral_vectors.rs  gen_schnorr_vectors.rs  gen_secp256k1_vectors.rs  gen_secp256r1_vectors.rs  gen_sha256_vectors.rs  (+19 more)
rust_generators/crypto/vectors/: aes_gcm.yaml  basic.yaml  bigint.yaml  block_hash.yaml  curve25519.yaml  keccak256.yaml  rangeproofs.yaml  secp256k1.yaml  tns.yaml
rust_py/tos_codec/: Cargo.toml  pyproject.toml
rust_py/tos_codec/src/: lib.rs
rust_py/tos_signer/: Cargo.toml  pyproject.toml
rust_py/tos_signer/src/: lib.rs
rust_py/tos_yaml/: Cargo.toml  pyproject.toml
rust_py/tos_yaml/src/: lib.rs
src/tos_spec/: __init__.py  account_model.py  codec_adapter.py  config.py  encoding.py  error_codes.py  errors.py  state_digest.py  state_transition.py  test_accounts.py  types.py
tests/: conftest.py  test_accounts.py  test_block_multi_tx.py  test_chain_import.py  test_consensus_block.py  test_consensus_order.py  test_consensus_specs.py  test_crypto_ristretto.py  test_crypto_vectors.py  test_fee_variants.py  test_models.py  test_p2p_specs.py  test_rpc_vectors.py  test_syscall_specs.py  test_template_example.py  test_tx_account.py  test_tx_arbitration.py  test_tx_burn.py  test_tx_contracts.py  test_tx_core.py  test_tx_energy.py  test_tx_escrow.py  test_tx_kyc.py  test_tx_privacy.py  test_tx_referral.py  test_tx_tns.py  test_wire_format.py  test_wire_format_negative.py
tests/data/: chain_import_daemon_expected.json  wire_format_core.json
tools/: consume.py  fill.py  fixtures_io.py  fixtures_to_vectors.py  gen_crypto_vectors_rust.py  gen_hash_vectors.py  run_conformance.py  yaml_dump.py
vectors/: accounts.json
vectors/p2p/: handshake.json  relay.json  sync.json
vectors/rpc/: rpc.json  rpc_methods.json  rpc_methods.yaml  websocket.json
vectors/unmapped/: wire_format.json
(+221 files in other folders)
