[package]
name = "tos_tck_crypto"
version = "0.1.0"
edition = "2021"

[workspace]

# Existing generators
[[bin]]
name = "gen_sha3_vectors"
path = "gen_sha3_vectors.rs"

[[bin]]
name = "gen_schnorr_vectors"
path = "gen_schnorr_vectors.rs"

[[bin]]
name = "gen_bech32_vectors"
path = "gen_bech32_vectors.rs"

[[bin]]
name = "gen_vrf_vectors"
path = "gen_vrf_vectors.rs"

# Phase 1: Standard hash functions
[[bin]]
name = "gen_sha256_vectors"
path = "gen_sha256_vectors.rs"

[[bin]]
name = "gen_sha512_vectors"
path = "gen_sha512_vectors.rs"

[[bin]]
name = "gen_keccak256_vectors"
path = "gen_keccak256_vectors.rs"

[[bin]]
name = "gen_blake3_vectors"
path = "gen_blake3_vectors.rs"

[[bin]]
name = "gen_hmac_vectors"
path = "gen_hmac_vectors.rs"

# Phase 2: Encoding and keys
[[bin]]
name = "gen_base58_vectors"
path = "gen_base58_vectors.rs"

[[bin]]
name = "gen_ed25519_vectors"
path = "gen_ed25519_vectors.rs"

[[bin]]
name = "gen_curve25519_vectors"
path = "gen_curve25519_vectors.rs"

[[bin]]
name = "gen_x25519_vectors"
path = "gen_x25519_vectors.rs"

# Phase 3: Symmetric encryption
[[bin]]
name = "gen_chacha20_vectors"
path = "gen_chacha20_vectors.rs"

[[bin]]
name = "gen_aes_gcm_vectors"
path = "gen_aes_gcm_vectors.rs"

[[bin]]
name = "gen_chacha20_poly1305_vectors"
path = "gen_chacha20_poly1305_vectors.rs"

# Phase 4: Advanced
[[bin]]
name = "gen_bigint_vectors"
path = "gen_bigint_vectors.rs"

[[bin]]
name = "gen_poseidon_vectors"
path = "gen_poseidon_vectors.rs"

[[bin]]
name = "gen_bn254_vectors"
path = "gen_bn254_vectors.rs"

[[bin]]
name = "gen_rangeproofs_vectors"
path = "gen_rangeproofs_vectors.rs"

[[bin]]
name = "check_gens"
path = "check_gens.rs"

[[bin]]
name = "gen_rangeproofs_table"
path = "gen_rangeproofs_table.rs"

[[bin]]
name = "verify_rangeproofs"
path = "verify_rangeproofs.rs"

[[bin]]
name = "dump_proof"
path = "dump_proof.rs"

[dependencies]
# SHA2 family
sha2 = "0.10"

# SHA3 - same version as TOS common
sha3 = "0.10"

# Keccak (tiny-keccak for keccak256)
tiny-keccak = { version = "2.0", features = ["keccak"] }

# BLAKE3
blake3 = "1.5"

# HMAC
hmac = "0.12"

# Curve25519/Ristretto255 - curve25519-dalek-ng is used by bulletproofs 4.0
curve25519-dalek-ng = "4.1"

# Bulletproofs for PedersenGens (H generator) and range proofs
bulletproofs = "4.0"
merlin = "3.0"

# Schnorrkel for VRF
schnorrkel = "0.11"

# Ed25519
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# X25519
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

# Base58
bs58 = "0.5"

# ChaCha20
chacha20 = "0.9"

# AES-GCM
aes-gcm = "0.10"

# ChaCha20-Poly1305 AEAD (TOS P2P encryption)
chacha20poly1305 = "0.10"

# BigInt
num-bigint = "0.4"

# Poseidon (light-poseidon used by Solana/TOS)
light-poseidon = "0.2"

# BN254 (ark-bn254 for curve operations)
ark-bn254 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"

# secp256k1 (k256 crate)
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }

# secp256r1 / P-256 (p256 crate)
p256 = { version = "0.13", features = ["ecdsa"] }

# BLS12-381 (blstrs for Rust bindings to blst)
blstrs = "0.7"
group = "0.13"
ff = "0.13"

# Random
rand = "0.8"

# Serialization
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# IndexSet (same version as TOS common)
indexmap = "2.2"

# TOS common for transaction payloads
tos_common = { path = "/Users/tomisetsu/tos/common" }

# TOS Kernel - for Module, ValueCell, Primitive types
tos-kernel = { git = "https://github.com/tos-network/tako", rev = "06c1b03" }

[[bin]]
name = "verify_quick"
path = "verify_quick.rs"

# Phase 5: Optional curves
[[bin]]
name = "gen_secp256k1_vectors"
path = "gen_secp256k1_vectors.rs"

[[bin]]
name = "gen_secp256r1_vectors"
path = "gen_secp256r1_vectors.rs"

[[bin]]
name = "gen_bls12_381_vectors"
path = "gen_bls12_381_vectors.rs"
[[bin]]
name = "gen_ed25519_point_vectors"
path = "gen_ed25519_point_vectors.rs"

# Transaction payload test vectors (TOS Rust wire format)
[[bin]]
name = "gen_basic_vectors"
path = "gen_basic_vectors.rs"

[[bin]]
name = "gen_tns_vectors"
path = "gen_tns_vectors.rs"

[[bin]]
name = "gen_multisig_vectors"
path = "gen_multisig_vectors.rs"

[[bin]]
name = "gen_contract_vectors"
path = "gen_contract_vectors.rs"

[[bin]]
name = "gen_uno_vectors"
path = "gen_uno_vectors.rs"


[[bin]]
name = "gen_block_hash_vectors"
path = "gen_block_hash_vectors.rs"

# Discv6 peer discovery test vectors
[[bin]]
name = "gen_discv6_vectors"
path = "gen_discv6_vectors.rs"
